* What is new in gsl-1.12+:

** Added a new function gsl_poly_eval_derivs to evaluate a polynomial
   and its derivatives simultaneously.

** Added a new univariate minimisation algorithm
   gsl_min_fminimizer_quad_golden which is a variant of Brent's
   algorithm with safeguarded step-length adjustment.

** Added a new Nelder-Mead minimiser gsl_multimin_fminimizer_nmsimplex2rand
   which uses a randomly oriented simplex rather than one fixed on
   the coordinate axes [bug #25077]

** The texinfo file now uses the dircategory "Software libraries" from
   the Free Software Directory, as recommended in the Texinfo manual.

** The function gsl_ran_exponential now includes zero in its output
   range. [bug #25039]

** All functions for freeing allocated memory now accept a NULL
   pointer, following the standard C convention for free(). [bug
   #25319]

** The function gsl_sum_levin_u_accel now handles the special case
   c_0 + 0 + 0 + 0 + .... that occurs when summing power series
   c_n*x^n with x=0. [bug #26807]

** The functions gsl_linalg_LU_solve, gsl_linalg_LU_svx,
   gsl_linalg_LU_refine, gsl_linalg_LU_invert and their complex
   equivalents now return an error for singular matrices.

** The multifit LMDER hybrid solvers now check the return code of the
   user-supplied function in the gsl_multifit_fdfsolver_set
   method. [bug #26871]

** Improved the implementation of gsl_ran_discrete_preproc to avoid
   internal errors due to inconsistencies from excess precision on
   some platforms. [bug #26502]

** Corrected gsl_sf_hyperg_2F1(a,b,c,x) to not give a domain error in
   the case where c is a negative integer and the series terminates
   with a finite result.

** The C99 inline keyword is now supported, in addition to the
   previously supported GNU-style inline.

** Modified gsl_poly_complex_solve_cubic and gsl_poly_solve_cubic to
   avoid returning NaNs in cases where excess precision causes a
   change in the number of roots. 
