@@ -1,3 +1,9 @@
+2009-07-11  Brian Gough  <bjg@network-theory.co.uk>
+
+	* hyperg_U.c (gsl_sf_hyperg_U_int_e10_e, gsl_sf_hyperg_U_e10_e)
+	(hyperg_U_origin, hyperg_U_int_origin): added special case for
+	U(a,b,z=0).
+
 2009-07-09  Brian Gough  <bjg@network-theory.co.uk>
 
 	* mathieu_workspace.c (gsl_sf_mathieu_free): handle NULL argument
