@@ -1,5 +1,8 @@
 * What is new in gsl-1.12+:
 
+** The confluent hypergeometric function gsl_sf_hyperg_U (a,b,x) now
+   handles some cases where x=0.
+
 ** Added a new function gsl_poly_eval_derivs to evaluate a polynomial
    and its derivatives simultaneously.
 
